Updated template one for a Foodie app

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,12 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    height: 100vh;
-    min-height: 100vh;
+    /* height: 100vh;
+    min-height: 100vh; */
   }
 
   #root {
-    background-color: #efefef;
+    /* background-color: #efefef; */
   }
   
   code {
